--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
-theme: jekyll-theme-dinky
-layout: default
+markdown: kramdown
+sass:
+  style: compressed
 
 title: Papa Koala
 description: the french koala
@@ -12,4 +13,3 @@ relative_links:
 include:
   - about.md
   - index.md
-
